--- a/Hangman/Hangman/Base.lproj/Main.storyboard
+++ b/Hangman/Hangman/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="33m-bG-32Y">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="33m-bG-32Y">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,12 +21,78 @@
                     <view key="view" contentMode="scaleToFill" id="xKS-yl-l6T">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Incorrect Guesses:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qg4-LZ-2Ss">
+                                <rect key="frame" x="25" y="229" width="334" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCL-iP-qiu">
+                                <rect key="frame" x="163" y="371" width="50" height="30"/>
+                                <state key="normal" title="GUESS"/>
+                                <connections>
+                                    <action selector="Guess:" destination="33m-bG-32Y" eventType="touchUpInside" id="lUi-Tz-ovP"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hangman1" translatesAutoresizingMaskIntoConstraints="NO" id="aEc-rh-LI8">
+                                <rect key="frame" x="127" y="20" width="131" height="131"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="131" id="Vz7-Nn-8TK"/>
+                                    <constraint firstAttribute="width" constant="131" id="atL-Ww-frO"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gQl-9M-hkO">
+                                <rect key="frame" x="173" y="333" width="29" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="b7u-zW-axI"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="EditingChanged:" destination="33m-bG-32Y" eventType="editingChanged" id="hUw-Ix-xam"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2qQ-rR-Qg6">
+                                <rect key="frame" x="27" y="167" width="321" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="gCL-iP-qiu" secondAttribute="trailing" constant="146" id="1aP-NR-x9P"/>
+                            <constraint firstItem="2qQ-rR-Qg6" firstAttribute="leading" secondItem="xKS-yl-l6T" secondAttribute="leadingMargin" constant="11" id="8UK-yA-gTU"/>
+                            <constraint firstItem="gCL-iP-qiu" firstAttribute="leading" secondItem="xKS-yl-l6T" secondAttribute="leadingMargin" constant="147" id="EM0-Je-Wc3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2qQ-rR-Qg6" secondAttribute="trailing" constant="11" id="Hmg-xo-tJr"/>
+                            <constraint firstItem="aEc-rh-LI8" firstAttribute="leading" secondItem="xKS-yl-l6T" secondAttribute="leadingMargin" constant="111" id="IOt-jt-7KT"/>
+                            <constraint firstItem="Qg4-LZ-2Ss" firstAttribute="top" secondItem="2qQ-rR-Qg6" secondAttribute="bottom" constant="22" id="P4N-AO-nda"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Qg4-LZ-2Ss" secondAttribute="trailing" id="PNO-3a-RVa"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gQl-9M-hkO" secondAttribute="trailing" constant="157" id="PUE-ar-lbP"/>
+                            <constraint firstItem="gQl-9M-hkO" firstAttribute="top" secondItem="Qg4-LZ-2Ss" secondAttribute="bottom" constant="83" id="Y8m-sg-wJT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aEc-rh-LI8" secondAttribute="trailing" constant="101" id="exO-nP-QQS"/>
+                            <constraint firstItem="aEc-rh-LI8" firstAttribute="top" secondItem="fga-sG-nzY" secondAttribute="bottom" id="f6h-SI-YK7"/>
+                            <constraint firstItem="Qg4-LZ-2Ss" firstAttribute="leading" secondItem="xKS-yl-l6T" secondAttribute="leadingMargin" constant="9" id="s19-rW-g92"/>
+                            <constraint firstItem="gQl-9M-hkO" firstAttribute="leading" secondItem="xKS-yl-l6T" secondAttribute="leadingMargin" constant="157" id="xZk-3D-uQa"/>
+                            <constraint firstItem="gCL-iP-qiu" firstAttribute="top" secondItem="gQl-9M-hkO" secondAttribute="bottom" constant="8" id="yjV-Az-UTS"/>
+                            <constraint firstItem="2qQ-rR-Qg6" firstAttribute="top" secondItem="aEc-rh-LI8" secondAttribute="bottom" constant="16" id="z4x-ga-x1V"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="IncorrectGuesses" destination="Qg4-LZ-2Ss" id="AnC-rZ-Bex"/>
+                        <outlet property="Input" destination="gQl-9M-hkO" id="vOq-0Z-TOP"/>
+                        <outlet property="StringToGuess" destination="2qQ-rR-Qg6" id="8gM-Av-tNT"/>
+                        <outlet property="hangManImage" destination="aEc-rh-LI8" id="Sex-5u-Jcd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GJo-zA-LYW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="652" y="-133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hangman1" width="200" height="200"/>
+    </resources>
 </document>
